# ri-calc

./: CMakeLists.txt  FindFFTW.cmake  README.md  etaPolyethylene.txt  etaTeflon.txt  etaToluene.txt  main.cpp  options.h
